// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS/SidebarStep Correct smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="sidebar-step">
    <p>
      Step form 1
    </p>
    <div class="status-icon status-icon--success status-icon--s status-icon--active">
    </div>
  </div>
</div>
`;

exports[`COMPONENTS/SidebarStep NotCorrect smoke-test 1`] = `
<div style="max-width: 295px;">
  <div class="sidebar-step">
    <p>
      Step form 1
    </p>
    <div class="status-icon status-icon--success status-icon--s status-icon--idle">
    </div>
  </div>
</div>
`;
